--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Maiko Sado</title>
     <link rel="stylesheet" href="stylesheet.css">
     
-    <link rel="icon" href="favicon.ico">  
+    <link rel="icon" href="https://raw.githubusercontent.com/maikosado/maiko2/master/favicon.ico">  
     <link href="https://fonts.googleapis.com/css?family=Courgette|Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
