--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2 class="indication-title">Indication</h2>
         <table>
         <tr>
-        <td><img class="indication-logo1" src="lungs-with-bronchi-.png"></td>   
+        <td><img class="indication-logo1" src="https://github.com/maikosado/maiko2/blob/master/lungs-with-bronchi-.png?raw=true"></td>   
         <td class="indication1">Diabetes.Diabetes.Diabetes.Diabetes.Diabetes.Diabetes.Diabetes.</td>
         </tr>
         <tr>
