--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
         <h2 class="indication-title">Indication</h2>
         <table>
         <tr>
-        <td><img class="indication-logo1" src="lungs-with-bronchi-.png"></td>   
+        <td><img class="indication-logo1" src="images/lungs-with-bronchi-.png"></td>   
         <td class="indication1">Diabetes.Diabetes.Diabetes.Diabetes.Diabetes.Diabetes.Diabetes.</td>
         </tr>
         <tr>
-        <td class="indication2">Dementia.Dementia.Dementia.Dementia.Dementia.Dementia.<td>
-        <td><img class="indication-logo2" src="anatomic-heart.png"><td>
+        <td class="indication2">Dementia.<span class="dementia1">Dementia.</span>Dementia.<span class="dementia2">Dementia.</span>Dementia.Dementia.<td>
+        <td><img class="indication-logo2" src="images/anatomic-heart.png"><td>
         </tr>
         <tr>
-        <td><img class="indication-logo3" src="brain-cenit-view.png"><td>
+        <td><img class="indication-logo3" src="images/brain-cenit-view.png"><td>
         <td class="indication3">Depression.Depression.Depression.Depression.Depression.<td>
         </tr>
         </table>
